# Chatting-protocol

./: README.org  spec.org
client/: Cargo.toml
client/src/: client.rs  commands.rs  main.rs
server/: Cargo.toml
server/src/: channel.rs  commands.rs  main.rs  users.rs
