[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "*", features = ["event-stream"] }
tokio = { version = "*", features = ["full"] }
futures = "*"
futures-timer = "*"